# DeepQuant

./: .gitignore  LICENSE  Makefile  README.md  conftest.py  example_usage.py  pyproject.toml  setup.py
.github/workflows/: BuildDocker.yml  CI.yml  Linting.yml
Container/: Dockerfile
DeepQuant/: CustomTracer.py  ExportBrevitas.py  export_brevitas.py
DeepQuant/CustomForwards/: Activations.py  Linear.py  MultiHeadAttention.py
DeepQuant/Injects/: Base.py  Executor.py  Transformations.py
DeepQuant/QuantManipulation/: DequantModifier.py  QuantDequantNodes.py  QuantNodesDivider.py
DeepQuant/Utils/: FxInterpreter.py  GraphPrinter.py
DeepQuant/injects/: base.py  executor.py  transformations.py
DeepQuant/quant_manipulation/: dequant_modifier.py  parameter_extractor.py  quant_nodes_divider.py
Tests/: TestConv.py  TestLinear.py  TestMHSA.py  TestMnist.py  TestMobileNetV3Small.py  TestResNet18.py  TestSimpleCNN.py  TestSimpleFCNN.py  TestSimpleMHA.py  TestSimpleNN.py  test_mnist.py  test_resnet18.py  test_simple_cnn.py  test_simple_mha.py  test_simple_nn.py
custom_forwards.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
onnx/: 1_model_qcdq_original.onnx  2_model_qcdq_transformed.onnx  3_model_splitted_quant.onnx  4_model_dequant_moved.onnx  inputs.npz  outputs.npz
src/DeepQuant/: __init__.py  custom_tracer.py  export_brevitas.py
src/DeepQuant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/DeepQuant/custom_forwards/: __init__.py  activations.py  linear.py  multiheadattention.py
src/DeepQuant/injects/: __init__.py
src/DeepQuant/quant_manipulation/: dequant_modifier.py
src/DeepQuant/tests/: __init__.py  mnist_fc.pth  test_mnist.py  test_resnet18.py  test_simple_cnn.py  test_simple_mha.py  test_simple_nn.py
